--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "cd client && npm run build",
     "install-client": "cd client && npm install",
     "heroku-postbuild": "npm run install-client && npm run build",
-    "start": "node server",
-    "server": "nodemon server",
+    "start": "cd client && npm start",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently --raw \"npm run server\" \"npm run client\""
   },
