--- a/client/package.json
+++ b/client/package.json
@@ -43,7 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "https://todo-list-s-maifetov.herokuapp.com/",
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "prettier": "2.3.1"
   }
